--- a/Plant/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/Plant/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -14,12 +14,12 @@
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label class="account_login_label" asp-for="Input.LastName"></label>
-                    <input asp-for="Input.LastName" class="form-control" />
+                    <input asp-for="Input.LastName" class="form-control" autocomplete="off"/>
                     <span asp-validation-for="Input.LastName" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label class="account_login_label" asp-for="Input.FirstName"></label>
-                    <input asp-for="Input.FirstName" class="form-control" />
+                    <input asp-for="Input.FirstName" class="form-control" autocomplete="off"/>
                     <span asp-validation-for="Input.FirstName" class="text-danger"></span>
                 </div>
                 <div class="form-group">
