--- a/Plant/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Plant/Areas/Identity/Pages/Account/Login.cshtml
@@ -15,11 +15,11 @@
                     <hr />
                     <div asp-validation-summary="All" class="text-danger"></div>
                     <div class="form-group">
-                        <input asp-for="Input.Email" class="form-control" placeholder="Email..." />
+                        <input asp-for="Input.Email" class="form-control" placeholder="Email..." autocomplete="off"/>
                         <span asp-validation-for="Input.Email" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <input asp-for="Input.Password" class="form-control" placeholder="Password..." />
+                        <input asp-for="Input.Password" class="form-control" placeholder="Password..." autocomplete="off"/>
                         <span asp-validation-for="Input.Password" class="text-danger"></span>
                     </div>
                     <div class="form-group">
