--- a/Plant/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Plant/Areas/Identity/Pages/Account/Register.cshtml
@@ -15,27 +15,27 @@
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
                     <label class="account_login_label" asp-for="Input.LastName"></label>
-                    <input asp-for="Input.LastName" class="form-control" />
+                    <input asp-for="Input.LastName" class="form-control" autocomplete="off"/>
                     <span asp-validation-for="Input.LastName" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label class="account_login_label" asp-for="Input.FirstName"></label>
-                    <input asp-for="Input.FirstName" class="form-control" />
+                    <input asp-for="Input.FirstName" class="form-control" autocomplete="off" />
                     <span asp-validation-for="Input.FirstName" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label class="account_login_label" asp-for="Input.Email"></label>
-                    <input asp-for="Input.Email" class="form-control" />
+                    <input asp-for="Input.Email" class="form-control" autocomplete="off"/>
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label class="account_login_label" asp-for="Input.Password"></label>
-                    <input asp-for="Input.Password" class="form-control" />
+                    <input asp-for="Input.Password" class="form-control" autocomplete="off"/>
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label class="account_login_label" asp-for="Input.ConfirmPassword"></label>
-                    <input asp-for="Input.ConfirmPassword" class="form-control" />
+                    <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="off"/>
                     <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                 </div>
                 <button type="submit" class="account_login_submit">Register</button>
