--- a/Plant/Views/Products/GetListProducts.cshtml
+++ b/Plant/Views/Products/GetListProducts.cshtml
@@ -7,6 +7,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
     int CurrentPage = ViewBag.CurrentPage;
     List<CategoryVm> category = ViewBag.Category;
+    string TextSortCate = ViewBag.TextSortCategory;
+    int IdCategoryProduct = ViewBag.IdCategoryProduct;
 }
 
 
@@ -38,8 +40,8 @@
                         <div class="widget_title">
                             <h3>@Localizer["search"]</h3>
                         </div>
-                        <form action="#">
-                            <input placeholder="@Localizer["search"]..." type="text">
+                        <form asp-action="SearchProduct" method="get">
+                            <input placeholder="@Localizer["search"]..." type="text" name="productName" autocomplete="off">
                             <button type="submit">@Localizer["search"]</button>
                         </form>
                     </div>
@@ -144,19 +146,63 @@
                 <!--shop toolbar start-->
                 <div class="shop_toolbar_wrapper">
                     <div class="shop_toolbar_btn">
-                        
+
                     </div>
                     <div class=" niceselect_option">
-                        <form class="select_option" action="#">
-                            <select name="orderby" id="short">
-                                <option selected value="1">Sort by average rating</option>
-                                <option value="2">Sort by popularity</option>
-                                <option value="3">Sort by newness</option>
-                                <option value="4">Sort by price: low to high</option>
-                                <option value="5">Sort by price: high to low</option>
-                                <option value="6">Product Name: Z</option>
+                        <div class="form-group">
+                            @{
+                                var encodeSortByPriceDescending = System.Web.HttpUtility.UrlEncode("Giá giảm");
+                                var encodeSortByPriceAscending = System.Web.HttpUtility.UrlEncode("Giá tăng");
+                                var encodeSortByVoucher = System.Web.HttpUtility.UrlEncode("Khuyễn mãi");
+                                var encodeSortBySellCount = System.Web.HttpUtility.UrlEncode("Lượt bán");
+                                var EncodeTextSortCate = System.Web.HttpUtility.UrlEncode(TextSortCate);
+                            }
+                            <select class="form-control" name="sortCategory" id="sortCategory">
+                                @{
+                                    if (EncodeTextSortCate == encodeSortByPriceDescending)
+                                    {
+                                        <option value="">Tất cả sản phẩm</option>
+                                        <option value="@Html.Raw(encodeSortByPriceAscending)">Giá: Thấp đến Cao</option>
+                                        <option value="@Html.Raw(encodeSortByPriceDescending)" selected>Giá: Cao đến Thấp</option>
+                                        <option value="@Html.Raw(encodeSortByVoucher)">Khuyến mãi: Cao đến Thấp</option>
+                                        <option value="@Html.Raw(encodeSortBySellCount)">Lượt bán: Cao đến Thấp</option>
+                                    }
+                                    else if (EncodeTextSortCate == encodeSortByPriceAscending)
+                                    {
+                                        <option value="">Tất cả sản phẩm</option>
+                                        <option value="@Html.Raw(encodeSortByPriceAscending)" selected>Giá: Thấp đến Cao</option>
+                                        <option value="@Html.Raw(encodeSortByPriceDescending)">Giá: Cao đến Thấp</option>
+                                        <option value="@Html.Raw(encodeSortByVoucher)">Khuyến mãi: Cao đến Thấp</option>
+                                        <option value="@Html.Raw(encodeSortBySellCount)">Lượt bán: Cao đến Thấp</option>
+                                    }
+                                    else if (EncodeTextSortCate == encodeSortByVoucher)
+                                    {
+                                        <option value="">Tất cả sản phẩm</option>
+                                        <option value="@Html.Raw(encodeSortByPriceAscending)">Giá: Thấp đến Cao</option>
+                                        <option value="@Html.Raw(encodeSortByPriceDescending)">Giá: Cao đến Thấp</option>
+                                        <option value="@Html.Raw(encodeSortByVoucher)" selected>Khuyến mãi: Cao đến Thấp</option>
+                                        <option value="@Html.Raw(encodeSortBySellCount)">Lượt bán: Cao đến Thấp</option>
+                                    }
+                                    else if (EncodeTextSortCate == encodeSortBySellCount)
+                                    {
+                                        <option value="">Tất cả sản phẩm</option>
+                                        <option value="@Html.Raw(encodeSortByPriceAscending)">Giá: Thấp đến Cao</option>
+                                        <option value="@Html.Raw(encodeSortByPriceDescending)">Giá: Cao đến Thấp</option>
+                                        <option value="@Html.Raw(encodeSortByVoucher)">Khuyến mãi: Cao đến Thấp</option>
+                                        <option value="@Html.Raw(encodeSortBySellCount)" selected>Lượt bán: Cao đến Thấp</option>
+                                    }
+                                    else
+                                    {
+                                        <option value="" selected>Tất cả sản phẩm</option>
+                                        <option value="@Html.Raw(encodeSortByPriceAscending)">Giá: Thấp đến Cao</option>
+                                        <option value="@Html.Raw(encodeSortByPriceDescending)">Giá: Cao đến Thấp</option>
+                                        <option value="@Html.Raw(encodeSortByVoucher)">Khuyến mãi: Cao đến Thấp</option>
+                                        <option value="@Html.Raw(encodeSortBySellCount)">Lượt bán: Cao đến Thấp</option>
+                                    }
+                                }
+
                             </select>
-                        </form>
+                        </div>
                     </div>
 
                 </div>
@@ -177,7 +223,7 @@
                                                 <span class="label_sale">-@item.Voucher% </span>
                                             }
                                         </div>
-                                       
+
                                     </div>
                                     <div class="product_content grid_content">
                                         <div class="product_price_rating">
@@ -235,3 +281,30 @@
     </div>
 </div>
 <!--shop  area end-->
+@section Scripts{
+    <script>
+    $(document).ready(function () {
+        $('#sortCategory').change(function () {
+            var selectedValue = $(this).val();
+            $.ajax({
+                url: '/Products/SortListCategoryProduct',
+                datatype: "json",
+                type: "GET",
+                data: {
+                    sortCategoryProduct: selectedValue,
+                    id:@IdCategoryProduct
+                },
+                async: true,
+                success: function (results) {
+                    if (results.status == "success") {
+                        window.location.href = results.redirectUrl;
+                    }
+                },
+                error: function (xhr) {
+                    alert("error");
+                }
+            });
+        });
+    })
+    </script>
+}
