--- a/Plant/Areas/Admin/Views/AdminBlogs/Create.cshtml
+++ b/Plant/Areas/Admin/Views/AdminBlogs/Create.cshtml
@@ -31,7 +31,7 @@
                     </div>
                     <div class="form-group">
                         <label class="mb-1 text-primary font-weight-bold"><i class="far fa-font"></i> Tiêu đề</label>
-                        <input asp-for="Title" type="text" class="form-control" id="control1" placeholder="Tên trang tin tức">
+                        <input asp-for="Title" type="text" class="form-control" id="control1" placeholder="Tên trang tin tức" autocomplete="off">
                     </div>
                     <div class="form-group">
                         <label class="mb-1 text-primary font-weight-bold"><i class="far fa-align-left"></i> Mô tả ngắn</label>
