--- a/Plant/Areas/Admin/Views/AdminProducts/Edit.cshtml
+++ b/Plant/Areas/Admin/Views/AdminProducts/Edit.cshtml
@@ -34,7 +34,7 @@
                     <div class="row">
                         <div class="form-group col-md-6">
                             <label class="mb-1 text-primary font-weight-bold"><i class="far fa-font"></i> Tên sản phẩm</label>
-                            <input asp-for="ProductName" type="text" class="form-control" placeholder="Nhập tên sản phẩm...">
+                            <input asp-for="ProductName" type="text" class="form-control" placeholder="Nhập tên sản phẩm..." autocomplete="off">
                         </div>
                         <div class="col-md-3 form-group">
                             <label class="mb-1 text-primary font-weight-bold"><i class="far fa-money-bill-alt"></i> Giá nhập</label>
