--- a/Plant/Areas/Admin/Views/AdminProducts/AddLanguages.cshtml
+++ b/Plant/Areas/Admin/Views/AdminProducts/AddLanguages.cshtml
@@ -34,7 +34,7 @@
                     <div class="row">
                         <div class="form-group col-md-8">
                             <label class="mb-1 text-primary font-weight-bold"><i class="far fa-font"></i> Tên sản phẩm</label>
-                            <input asp-for="ProductName" type="text" class="form-control" id="control1" placeholder="Nhập tên sản phẩm...">
+                            <input asp-for="ProductName" type="text" class="form-control" id="control1" placeholder="Nhập tên sản phẩm..." autocomplete="off">
                         </div>
                     </div>
 
