--- a/Plant/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Plant/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -86,7 +86,9 @@
                             </div>
                         </div>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#"><i class="dropdown-icon zmdi zmdi-power"></i><span>Log out</span></a>
+                        <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post">
+                            <button class="dropdown-item" type="submit"><i class="dropdown-icon zmdi zmdi-power"></i><span>Log out</span></button>
+                        </form>
                     </div>
                 </li>
             </ul>
