--- a/Plant/Views/Shared/_LoginPartial.cshtml
+++ b/Plant/Views/Shared/_LoginPartial.cshtml
@@ -2,6 +2,8 @@
 @using Plant.Areas.Identity.Data
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
 
 @if (SignInManager.IsSignedIn(User))
 {
@@ -11,14 +13,14 @@
     <a><i class="fa-solid fa-user"></i> @firstName</a>
     <ul class="dropdown_links">
         <li>
-            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Tài khoản của tôi</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">@Localizer["my account"]</a>
         </li>
         <li>
-            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="ManageOrder">Đơn mua</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="ManageOrder">@Localizer["purchase order"]</a>
         </li>
         <li>
             <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post">
-                <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+                <button id="logout" type="submit" class="nav-link btn btn-link text-dark">@Localizer["logout"]</button>
             </form>
         </li>
     </ul>
@@ -28,10 +30,10 @@ else
     <a><i class="fa-solid fa-user"></i></a>
     <ul class="dropdown_links">
         <li>
-            <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
+            <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">@Localizer["register"]</a>
         </li>
         <li>
-            <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
+            <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">@Localizer["login"]</a>
         </li>
     </ul>
 
