--- a/Plant/Views/Users/Index.cshtml
+++ b/Plant/Views/Users/Index.cshtml
@@ -20,9 +20,8 @@
                     <!-- Nav tabs -->
                     <div class="dashboard_tab_button">
                         <ul role="tablist" class="nav flex-column dashboard-list">
-                            <li><a asp-area="" asp-controller="Users" asp-action="Index"  class="nav-link active">Tài khoản của tôi</a></li>
-                            <li> <a asp-area="" asp-controller="Users" asp-action="ManageOrder"  class="nav-link">Đơn mua</a></li>
-                            <li><a href="#downloads"  class="nav-link">Thông báo</a></li>
+                            <li><a asp-area="" asp-controller="Users" asp-action="Index"  class="nav-link active">@Localizer["my account"]</a></li>
+                            <li> <a asp-area="" asp-controller="Users" asp-action="ManageOrder" class="nav-link">@Localizer["purchase order"]</a></li>
                         </ul>
                     </div>
                 </div>
@@ -59,35 +58,6 @@
                                 </div>
                             </div>
                         }
-                        <div class="tab-pane fade" id="downloads">
-                            <h3>Downloads</h3>
-                            <div class="table-responsive">
-                                <table class="table">
-                                    <thead>
-                                        <tr>
-                                            <th>Product</th>
-                                            <th>Downloads</th>
-                                            <th>Expires</th>
-                                            <th>Download</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>Shopnovilla - Free Real Estate PSD Template</td>
-                                            <td>May 10, 2018</td>
-                                            <td><span class="danger">Expired</span></td>
-                                            <td><a href="#" class="view">Click Here To Download Your File</a></td>
-                                        </tr>
-                                        <tr>
-                                            <td>Organic - ecommerce html template</td>
-                                            <td>Sep 11, 2018</td>
-                                            <td>Never</td>
-                                            <td><a href="#" class="view">Click Here To Download Your File</a></td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
