--- a/Plant/Views/Orders/CartDone.cshtml
+++ b/Plant/Views/Orders/CartDone.cshtml
@@ -22,10 +22,10 @@
                 </div>
                 <div class="row" style="margin-top:15px;">
                     <div class="col-lg-4 col-md-6 col-6">
-                        <button class="btn btn-warning">Quản lí đơn hàng</button>
+                        <a type="button" asp-area="" asp-controller="Users" asp-action="ManageOrder" class="btn btn-warning">Quản lí đơn hàng</a>
                     </div>
                     <div class="col-lg-4 col-md-6 col-6">
-                        <button class="btn btn-success">Tiếp tục mua hàng</button>
+                        <a type="button" asp-area="" asp-controller="Products" asp-action="Index" class="btn btn-success">Tiếp tục mua hàng</a>
                     </div>
                 </div>
             </div>
